[tool.poetry]
name = "em-vlas-simu-code"
version = "0.1.0"
description = ""
authors = ["NAGAMINE Hideaki <1995.hnagamin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wxPython = "^4.1.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
