[tool.poetry]
name = "em-vlas-simu-code"
version = "0.1.0"
description = ""
authors = ["NAGAMINE Hideaki <1995.hnagamin@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
wxPython = "^4.1.1"
matplotlib = "^3.4.2"
numba = "^0.53.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
